<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:focusable="true"
	android:focusableInTouchMode="true"
	android:id="@+id/activity_register"
	android:orientation="vertical"
	android:padding="@dimen/activity_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="com.charolia.gadde.ess.RegisterActivity"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:id="@+id/llUser">
			<TextView
			android:layout_width="110dp"
			android:layout_height="wrap_content"
			android:inputType="none"
			android:ems="10"
			android:id="@+id/etReg"
			android:text="@string/reg_type"
			android:textSize="20sp"
			android:textColor="#000000"
			android:layout_marginTop="11dp" />

			<RadioGroup
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:id="@+id/rGrp">
				
				<RadioButton
				android:text="@string/reg_js"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="rbClick"
				android:id="@+id/rbJS"
				android:layout_marginTop="7dp"
				android:layout_marginStart="5dp" />

				<RadioButton
				android:text="@string/reg_rec"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/rbRec"
                android:checked="false"
                android:onClick="rbClick"
				android:layout_marginTop="7dp"
				android:layout_marginStart="10dp" />
            </RadioGroup>
    </LinearLayout>

	<Button
		android:id="@+id/bRegister"
		android:layout_marginStart="90dp"
		android:layout_alignParentBottom="true"
		android:text="@string/reg_btn"
		android:layout_width="173dp"
		android:layout_marginTop="19dp"
		android:layout_alignParentStart="true"
		android:layout_gravity="center"
		android:layout_height="32dp"
		android:background="@color/colorPrimary"
		android:paddingBottom="1dp"
		android:paddingLeft="15dp"
		android:paddingRight="15dp"
		android:paddingTop="1dp"
		android:textAllCaps="true"
		android:textColor="@android:color/white"
		android:textSize="13sp" />

	<ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:overScrollMode="never"
		android:id="@+id/sView"
		android:layout_below="@+id/llUser"
		android:layout_alignParentStart="true"
		android:layout_above="@+id/bRegister">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
			android:focusable="true"
			android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/etName"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/reg_name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:layout_below="@+id/etName"
                    android:layout_marginTop="14dp"
                    android:id="@+id/etEmail"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:hint="@string/reg_email" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:layout_marginTop="14dp"
                    android:id="@+id/etUsername"
                    android:hint="@string/reg_uname"
                    android:layout_below="@+id/etEmail"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:layout_below="@+id/etUsername"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="13dp"
                    android:id="@+id/etPassword"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/reg_pass" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:layout_below="@+id/etPassword"
                    android:layout_alignEnd="@+id/etPassword"
                    android:layout_marginTop="18dp"
                    android:id="@+id/etrPassword"
                    android:layout_alignParentStart="true"
                    android:hint="@string/reg_rpass" />

            </android.support.design.widget.TextInputLayout>


                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:layout_marginTop="14dp"
                    android:id="@+id/spGender"
                    android:entries="@array/spinner_gender" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:layout_below="@+id/etSpinner"
                    android:layout_above="@+id/etPhone"
                    android:layout_marginTop="14dp"
                    android:id="@+id/etLocation"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:hint="@string/reg_loc" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number|phone"
                    android:ems="10"
                    android:id="@+id/etPhone"
                    android:hint="@string/reg_phone"
                    android:layout_below="@+id/etLocation"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="13dp"
                    android:layout_alignParentEnd="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/llDate"
                android:weightSum="1"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:ems="10"
                        android:id="@+id/etDOB"
                        android:hint="@string/reg_dob"
                        android:layout_marginTop="11dp"
                        android:editable="false"
                        android:layout_below="@+id/etPhone"
                        android:layout_alignParentStart="true"
                        android:layout_toStartOf="@+id/ivDate" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    app:srcCompat="@android:drawable/ic_menu_month"
                    android:layout_marginEnd="27dp"
                    android:id="@+id/ivDate"
                    android:layout_gravity="center" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
