<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.charolia.gadde.ess.Fragments.FeedbackFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:weightSum="1">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                card_view:cardCornerRadius="1dp"
                card_view:contentPadding="10dp"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardElevation="5dp">

                <LinearLayout
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:id="@+id/etFBName"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:hint="@string/feedback_form_name" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:ems="10"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:id="@+id/etFBEmail"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:hint="@string/feedback_form_email" />

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:ems="10"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:id="@+id/etFBSubject"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:hint="@string/feedback_form_subject" />

                    </android.support.design.widget.TextInputLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="4dp"
                        android:textSize="18sp"
                        android:text="@string/feedback_form_message"
                        android:layout_marginTop="20dp"/>

                    <EditText
                        android:id="@+id/etFBack"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:height="180dp"
                        android:gravity="top"
                        android:inputType="textMultiLine" />

                    <Button
                        android:text="@string/feedback_form_button"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:id="@+id/bSumbitFB"
                        android:background="@color/colorPrimary"
                        android:layout_marginTop="10dp"
                        android:paddingBottom="1dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="1dp"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textSize="13sp"
                        android:layout_gravity="center"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
